--- a/src/test-renders/C4.md
+++ b/src/test-renders/C4.md
@@ -23,7 +23,9 @@ C4Context
 
 **Rendered by Naiad:**
 
-![Simple](../Tests/C4/C4Tests.Simple.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.Simple.verified.png" />
+</p>
 
 ## External
 
@@ -52,7 +54,9 @@ C4Context
 
 **Rendered by Naiad:**
 
-![External](../Tests/C4/C4Tests.External.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.External.verified.png" />
+</p>
 
 ## Container
 
@@ -85,7 +89,9 @@ C4Container
 
 **Rendered by Naiad:**
 
-![Container](../Tests/C4/C4Tests.Container.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.Container.verified.png" />
+</p>
 
 ## Component
 
@@ -114,7 +120,9 @@ C4Component
 
 **Rendered by Naiad:**
 
-![Component](../Tests/C4/C4Tests.Component.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.Component.verified.png" />
+</p>
 
 ## MixedElements
 
@@ -151,7 +159,9 @@ C4Context
 
 **Rendered by Naiad:**
 
-![MixedElements](../Tests/C4/C4Tests.MixedElements.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.MixedElements.verified.png" />
+</p>
 
 ## NoRelationships
 
@@ -176,7 +186,9 @@ C4Context
 
 **Rendered by Naiad:**
 
-![NoRelationships](../Tests/C4/C4Tests.NoRelationships.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.NoRelationships.verified.png" />
+</p>
 
 ## Complex
 
@@ -233,5 +245,7 @@ C4Context
 
 **Rendered by Naiad:**
 
-![Complex](../Tests/C4/C4Tests.Complex.verified.png)
+<p align="center">
+  <img src="../Tests/C4/C4Tests.Complex.verified.png" />
+</p>
 
